syntax ="proto3";
package kv;
import "common.proto";

service KvService{
    rpc set(SetRequest) returns(common.CommonReply){}
    rpc delete(DeleteRequest) returns(common.CommonReply){}
    rpc get(GetRequest) returns(GetReply){}
    rpc exists(ExistsRequest) returns(ExistsReply){}
}

message SetRequest{
    string key =1;
    string value=2;
}

message GetRequest{
    string key=1;
}

message GetReply{
    string value=1;
}

message DeleteRequest{
    string key =1;
}

message ExistsRequest{
    string key =1;
}

message ExistsReply{
    bool flag =1;
}